# Murmur

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: benchmark.py  benchmark_whisperx.py
murmur/: __init__.py
murmur/chunking/: __init__.py  vad_chunker.py
murmur/inference/: __init__.py  kv_cache.py  local_engine.py
murmur/metrics/: __init__.py  asr_metrics.py
murmur/modeling/: __init__.py
murmur/modeling/vibevoice/: NOTICE  __init__.py
murmur/modeling/vibevoice/modular/: __init__.py  configuration_vibevoice.py  modeling_vibevoice_asr.py  modular_vibevoice_text_tokenizer.py
murmur/modeling/vibevoice/processor/: __init__.py  vibevoice_asr_processor.py
tests/: conftest.py  test_benchmark_helpers.py  test_engine.py  test_kv_cache.py  test_metrics.py  test_smoke.py
